# crisp-docx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PARITY.md  PLAN.md  PUBLISH.md  README.md
.github/workflows/: ci.yml  release.yml
crates/crisp-docx-align/: Cargo.toml
crates/crisp-docx-align/examples/: align_smoke.rs
crates/crisp-docx-align/src/: algorithm.rs  embed.rs  errors.rs  format_transfer.rs  lib.rs  subword.rs
crates/crisp-docx-cli/: Cargo.toml
crates/crisp-docx-cli/src/: main.rs
crates/crisp-docx-core/: Cargo.toml
crates/crisp-docx-core/examples/: unbold.rs
crates/crisp-docx-core/src/: blueprint.rs  check.rs  clean_runs.rs  error.rs  footnote_format.rs  heading_inference.rs  lib.rs  normalize_tags.rs  note_injection.rs  notes_kind.rs  ns.rs  package.rs  paragraph_runs.rs  paragraph_text.rs  rsid_strip.rs  strip_paragraph_bold.rs  style_classify.rs  style_mapper.rs  transplant.rs
crates/crisp-docx-core/tests/: integration.rs  live.rs  parity.rs
crates/crisp-docx-core/tests/common/: mod.rs
crates/crisp-docx-core/tests/parity_fixtures/: README.md
crates/crisp-docx-core/tests/parity_scripts/: run_python.py
crates/crisp-docx-llm/: Cargo.toml
crates/crisp-docx-llm/examples/: nmt_smoke.rs
crates/crisp-docx-llm/src/: error.rs  lib.rs  translator.rs
crates/crisp-docx-llm/src/providers/: anthropic.rs  mod.rs  nmt.rs  ollama.rs  openai.rs
crates/crisp-docx-llm/tests/: live.rs  wire_format.rs
crates/crisp-docx-py/: Cargo.toml  pyproject.toml
crates/crisp-docx-py/src/: lib.rs
crates/crisp-translate-cli/: Cargo.toml
crates/crisp-translate-cli/src/: main.rs
