[package]
name        = "crisp-docx-core"
description = "Pure Rust OOXML (.docx) primitives: zip + XML manipulation, no UI, no I/O policy."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
quick-xml  = { workspace = true }
zip        = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
anyhow     = { workspace = true }
serde_json = { workspace = true }
