[package]
name        = "crisp-docx-llm"
version     = "0.1.0"
edition     = "2021"
description = "Async LLM HTTP clients (OpenAI / Anthropic / Ollama / Groq) for use in the crisp-docx translator pipeline. Rust port of CrispTranslator's LLMTranslator."
license     = { workspace = true }
repository  = { workspace = true }

[dependencies]
async-trait = { workspace = true }
futures     = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
