[package]
name        = "crisp-docx-llm"
description = "Async LLM HTTP clients (OpenAI / Anthropic / Ollama / Groq + 8 OpenAI-compat hosts) plus optional offline NMT via CrispASR — the translation backend for the crisp-docx pipeline."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords    = ["llm", "openai", "anthropic", "translation", "ollama"]
categories  = ["api-bindings", "asynchronous", "text-processing"]
# Not published to crates.io: the optional `nmt` feature path-deps the
# sibling CrispASR repo, which isn't (yet) on crates.io. Consumers
# wanting this crate use a git dep on CrispStrobe/crisp-docx instead.
publish     = false

[features]
default = []
# Opt-in: pulls in CrispASR as a local NMT backend (m2m100 / wmt21 /
# madlad / gemma4-e2b — see CrispStrobe/CrispASR). Adds minutes to the
# first build because the C++ runtime is compiled in. Required for the
# `ProviderKind::Nmt` variant.
nmt = ["dep:crispasr"]

[dependencies]
async-trait = { workspace = true }
futures     = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

# CrispASR offline NMT backend (m2m100 / wmt21 / …). Path dep is a
# sibling checkout — the same pattern crisp-docx-align uses for
# CrispEmbed. Loaded only when the `nmt` feature is enabled.
crispasr = { path = "../../../CrispASR/crispasr", version = "0.5", optional = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
