[package]
name        = "crisp-translate-cli"
version     = "0.1.0"
edition     = "2021"
description = "End-to-end CLI: translate a .docx with format preserved, via crisp-docx + crisp-docx-llm."
license     = { workspace = true }
repository  = { workspace = true }

[[bin]]
name = "crisp-translate"
path = "src/main.rs"

[features]
default = []
# Opt-in: pulls in `crisp-docx-align` with its CrispEmbed encoder. Adds
# minutes to the first build because the ggml C++ runtime is compiled
# in. Required for `--preserve-formatting`.
align = ["dep:crisp-docx-align", "dep:crispembed"]

[dependencies]
crisp-docx-core  = { workspace = true }
crisp-docx-llm   = { path = "../crisp-docx-llm", version = "0.1.0" }
crisp-docx-align = { path = "../crisp-docx-align", version = "0.1.0", features = ["crispembed"], optional = true }
crispembed       = { path = "../../../CrispEmbed/crispembed", version = "0.4", optional = true }

anyhow      = { workspace = true }
clap        = { workspace = true }
futures     = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
