[package]
name        = "crisp-translate-cli"
description = "`crisp-translate` — end-to-end .docx translation CLI. Picks paragraphs, hits an LLM provider (cloud or local), writes back preserving paragraph styles, sections, bookmarks, and footnote refs. Optional alignment-driven intra-paragraph format preservation under --features align."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords    = ["docx", "translation", "cli", "llm", "ooxml"]
categories  = ["command-line-utilities", "text-processing"]
# Not published to crates.io: transitively depends on crisp-docx-llm
# (sibling CrispASR path dep) and optionally crisp-docx-align (sibling
# CrispEmbed). Use a git dep / `cargo install --git` until those upstream
# crates land on the registry.
publish     = false

[[bin]]
name = "crisp-translate"
path = "src/main.rs"

[features]
default = []
# Opt-in: pulls in `crisp-docx-align` with its CrispEmbed encoder. Adds
# minutes to the first build because the ggml C++ runtime is compiled
# in. Required for `--preserve-formatting`.
align = ["dep:crisp-docx-align", "dep:crispembed"]

[dependencies]
crisp-docx-core  = { workspace = true }
crisp-docx-llm   = { path = "../crisp-docx-llm", version = "0.1.0" }
crisp-docx-align = { path = "../crisp-docx-align", version = "0.1.0", features = ["crispembed"], optional = true }
crispembed       = { path = "../../../CrispEmbed/crispembed", version = "0.4", optional = true }

anyhow      = { workspace = true }
clap        = { workspace = true }
futures     = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
